--- a/alfa-app/src/index.css
+++ b/alfa-app/src/index.css
@@ -15,11 +15,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #8f8f8f;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #c7c7c7;
 }
 
 body {
@@ -47,7 +47,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #c7c7c7;
 }
 button:focus,
 button:focus-visible {
@@ -60,7 +60,7 @@ button:focus-visible {
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: #c7c7c7;
   }
   button {
     background-color: #f9f9f9;
