--- a/alfa-app/src/index.css
+++ b/alfa-app/src/index.css
@@ -26,6 +26,7 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
+  align-items: flex-start;
   min-width: 320px;
   min-height: 100vh;
 }
